<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup android:id="@+id/RadioGroup01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rad_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rad_1"></RadioButton>

        <RadioButton
            android:id="@+id/rad_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rad_2"></RadioButton>

        <RadioButton
            android:id="@+id/rad_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rad_3"></RadioButton>

        <RadioButton
            android:id="@+id/rad_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rad_4"></RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/but_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/but_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup01" />


</android.support.constraint.ConstraintLayout>